tests/cpp/internal/negative_case/parser_debug_record_member_param_default_rank.cpp
// Parser-debug regression: keep the inner record-member parameter failure when
// an outer record/top-level wrapper reaches the same EOF token later.

class Broken {
    struct Nested {
        int fn(int value = foo( ;
    };
};
